--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -17,7 +17,9 @@ $saturation-accent: 100%;
 $lightness-accent: 51%;
 $color-accent: hsl($hue-accent, $saturation-accent, $lightness-accent);
 
+$primary-clr: #004080;
 $primary-clr: hsl(210, 100%, 25%);
+$secondary-clr: #0a1b24;
 $secondary-clr: hsl(200, 57%, 9%);
 $accent-clr: hsl(45, 100%, 51%);
 
