--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -163,7 +163,7 @@
           </p>
           <div class="d-flex flex-column flex-md-row  align-items-center mt-4 justify-content-center justify-content-md-start gap-md-2 btn-row">
             <!-- "Know More" Button -->
-            <a href="/esp-business" class="btn btn-primary ">Know more</a>
+            <a href="/esp-government" class="btn btn-primary">Know more</a>
           
               <!-- PDF Icon with Dropdown for Brochure -->
               <div class="dropdown mt-2 mt-md-0">
@@ -171,8 +171,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item" href="/path-to-view-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item" href="/path-to-download-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -220,7 +220,7 @@
           <!-- </p> -->
           <div class="d-flex flex-column flex-md-row  align-items-center mt-4 justify-content-center justify-content-md-start gap-md-2 btn-row">
             <!-- "Know More" Button -->
-            <a href="/esp=non-profit" class="btn btn-primary  ">Know more</a>
+            <a href="/esp-non-profit" class="btn btn-primary  ">Know more</a>
           
               <!-- PDF Icon with Dropdown for Brochure -->
               <div class="dropdown mt-2 mt-md-0">
@@ -228,8 +228,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item" href="/path-to-view-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item" href="/path-to-download-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -272,8 +272,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item" href="/path-to-view-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item" href="/path-to-download-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -310,7 +310,7 @@
 
           <div class="d-flex flex-column flex-md-row  align-items-center mt-4 justify-content-center justify-content-md-start gap-md-2 btn-row">
             <!-- "Know More" Button -->
-            <a href="/esp-government-organizations" class="btn btn-primary  ">Know more</a>
+            <a href="/esp-government" class="btn btn-primary  ">Know more</a>
           
               <!-- PDF Icon with Dropdown for Brochure -->
               <div class="dropdown mt-2 mt-md-0">
@@ -318,8 +318,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item" href="/path-to-view-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item" href="/path-to-download-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -552,6 +552,20 @@
     </div>
   </div>
 </section>
+
+<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="videoModalLabel">ESP Government Video</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/ps09Fv_BCrw" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
 
 {{ end }}
 
