--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -25,9 +25,9 @@
     <!-- <li class="nav-item">
         <a class="nav-link" href="#">Blog</a>
     </li> -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="/clientele-beneficiaries">Clientele</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" href="/other-l-and-d-services">Other L&D</a>
             </li>
