--- a/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_utilities.scss
@@ -46,3 +46,35 @@
 .text-primary {
     color: $primary-clr;
 }
+
+.gradient-bg{
+  background: linear-gradient(84deg, rgba(10, 27, 36, 1) 51%, rgba(0, 64, 128, 1) 100%);
+  color: $text-light-clr;
+
+  .btn-primary--outline_none{
+    color: $text-light-clr;
+    i{
+        color: $text-light-clr;
+    }
+  }
+  .neumorphism{
+    box-shadow: 10px 10px 30px #d4d4d8, -10px -10px 30px #fff;
+
+  }
+}
+.gradient-bg-card{
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background: linear-gradient(135deg, $primary-clr 60%, $secondary-clr 100%);
+    color: $text-light-clr;
+
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+}
+
+.py-custom{
+    padding-block: 5rem;
+}
