--- a/themes/growth-sketch/assets/scss/abstracts/_variables.scss
+++ b/themes/growth-sketch/assets/scss/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $white: #fff;
 $black: #000;
 $dark-clr: hsl(0, 0%, 17%);
 $text-dark: hsl(240, 29%, 07%);
+$text-light-clr: hsl(0, 0%, 100%);
 
 
 // cards
