--- a/themes/growth-sketch/assets/scss/base/_reset.scss
+++ b/themes/growth-sketch/assets/scss/base/_reset.scss
@@ -54,6 +54,6 @@ img {
     height: auto;
     /* display: block; */
 }
-.fa, .fab, .fas{
-    color: $accent-clr;
-}
+// .fa, .fab, .fas{
+//     color: $accent-clr;
+// }
