--- a/themes/growth-sketch/assets/scss/main.scss
+++ b/themes/growth-sketch/assets/scss/main.scss
@@ -14,14 +14,18 @@ body{
     background: linear-gradient(84deg, rgba(10, 27, 36, 1) 51%, rgba(0, 64, 128, 1) 100%);
     // padding: 50px 0;
   
-    .contact-info {
-      background-color: rgba(0, 0, 0, 0.5); // Semi-transparent background for contrast
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    .contact-left-bg{
+        background: $secondary-clr url(/images/contact-us-bg.jpg) no-repeat center/cover;
+        background-blend-mode: overlay;
     }
+    // .contact-info {
+    //   background-color: rgba(0, 0, 0, 0.5); // Semi-transparent background for contrast
+    //   border: 1px solid rgba(255, 255, 255, 0.2);
+    //   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    // }
   
     .contact-form {
-      background-color: rgba(255, 255, 255, 0.9);
+    //   background-color: rgba(255, 255, 255, 0.9);
       height: 100%;
       border: 1px solid rgba(0, 0, 0, 0.1);
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -48,3 +52,6 @@ body{
   .form{
     min-height: 60vh;
   }
+
+
+  
