--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -31,6 +31,29 @@
 .text-primary {
   color: #004080; }
 
+.gradient-bg {
+  background: linear-gradient(84deg, #0a1b24 51%, #004080 100%);
+  color: white; }
+  .gradient-bg .btn-primary--outline_none {
+    color: white; }
+    .gradient-bg .btn-primary--outline_none i {
+      color: white; }
+  .gradient-bg .neumorphism {
+    box-shadow: 10px 10px 30px #d4d4d8, -10px -10px 30px #fff; }
+
+.gradient-bg-card {
+  border-radius: 25px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background: linear-gradient(135deg, #004080 60%, #0a1b24 100%);
+  color: white; }
+  .gradient-bg-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
+
+.py-custom {
+  padding-block: 5rem; }
+
 .attributions {
   opacity: 0.5; }
 
@@ -85,9 +108,6 @@ img {
   height: auto;
   /* display: block; */ }
 
-.fa, .fab, .fas {
-  color: #ffc105; }
-
 @font-face {
   font-family: 'Daniel';
   src: url("/fonts/daniel/daniel.ttf") format("truetype");
@@ -135,7 +155,7 @@ img {
 
 .footer {
   background-color: #4da6ff;
-  color: #f8fbfc;
+  background-color: #bdecfa;
   padding: 40px 0;
   position: relative;
   text-align: center; }
@@ -148,7 +168,7 @@ img {
   .footer .nav .nav-item {
     text-align: center; }
   .footer .nav-link {
-    color: #ffc105;
+    color: #9e7700;
     margin: 0 15px;
     text-transform: uppercase;
     font-weight: 500;
@@ -157,7 +177,7 @@ img {
     .footer .nav-link:hover {
       color: #fff; }
   .footer .social-icons .social-link {
-    color: #ffc105;
+    color: #9e7700;
     margin: 0 10px;
     font-size: 24px;
     transition: color 0.3s ease, transform 0.3s ease; }
@@ -168,7 +188,7 @@ img {
     font-size: 14px;
     margin-top: 20px; }
     .footer .footer-copyright a {
-      color: #ffc105; }
+      color: #9e7700; }
       .footer .footer-copyright a:hover {
         text-decoration: underline; }
 
@@ -286,17 +306,23 @@ img {
     font-weight: bold; }
   .beneficiaries .beneficiary-card {
     background: #004080;
+    background: linear-gradient(135deg, #004080 60%, #0a1b24 100%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    color: white;
     padding: 0.3rem;
     text-align: center;
-    transition: all 0.3s ease;
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-inline: auto; }
+    .beneficiaries .beneficiary-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
     @media (max-width: 425px) {
       .beneficiaries .beneficiary-card {
         width: 40vw;
@@ -342,9 +368,7 @@ img {
 .btn-row i {
   background-color: transparent;
   color: #004080;
-  font-size: 1.2rem;
-  width: 1.4em;
-  height: 1.4em; }
+  font-size: 1.3rem; }
 
 @media (max-width: 768px) {
   .btn-row .btn {
@@ -508,9 +532,7 @@ img {
         font-size: 1rem; }
 
 .why-espeople {
-  padding: 2rem;
   font-family: 'Arial', sans-serif;
-  color: #333;
   background: #f9f9f9; }
 
 .why-espeople .content {
@@ -519,7 +541,6 @@ img {
   gap: 2rem; }
 
 .why-espeople .column {
-  background: #fff;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -532,7 +553,6 @@ img {
 
 .why-espeople h3 {
   margin-bottom: 1rem;
-  color: #444;
   font-size: 1.5rem; }
 
 .why-espeople ul {
@@ -550,12 +570,10 @@ img {
   line-height: 1.6; }
 
 .why-espeople em {
-  font-style: italic;
-  color: #777; }
+  font-style: italic; }
 
 .why-espeople strong {
-  font-weight: bold;
-  color: #555; }
+  font-weight: bold; }
 
 /* Desktop Layout */
 @media (min-width: 768px) {
@@ -602,7 +620,6 @@ img {
     color: #0a1b24;
     margin-bottom: 1rem; }
   .learning-section .text-content p {
-    color: #666;
     margin-bottom: 1.5rem; }
   .learning-section .text-content .view-more-btn {
     background-color: #ffc105;
@@ -620,13 +637,60 @@ img {
     justify-content: center; }
     .learning-section .image-content .image-wrapper {
       position: relative;
-      background-color: rgba(255, 193, 5, 0.351);
+      background-color: #ffc105;
       padding: 1rem;
       clip-path: polygon(50% 0%, 100% 35%, 82% 100%, 18% 100%, 0% 35%);
       width: 300px; }
       @media (min-width: 768px) {
         .learning-section .image-content .image-wrapper {
           transform: rotate(-10deg); } }
+.esp-approach-section {
+  padding-block: 5rem;
+  background-color: #0a1b24;
+  background: linear-gradient(84deg, #0a1b24 51%, #004080 100%); }
+  .esp-approach-section .col-md-4:nth-child(odd) .approach-card {
+    background: linear-gradient(135deg, #004080 60%, #0a1b24 100%);
+    color: white; }
+  .esp-approach-section .col-md-4:nth-child(even) .approach-card {
+    background: linear-gradient(135deg, #0a1b24 60%, #004080 100%);
+    color: white; }
+  .esp-approach-section .approach-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background: #004080;
+    min-height: 450px;
+    border-radius: 25px;
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease; }
+    .esp-approach-section .approach-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
+    .esp-approach-section .approach-card img {
+      width: 50px;
+      height: 50px; }
+    .esp-approach-section .approach-card h4 {
+      color: #cccccc;
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      font-weight: bold; }
+    .esp-approach-section .approach-card p {
+      color: #999999;
+      font-size: 0.95rem; }
+    .esp-approach-section .approach-card .key-benefits {
+      list-style: none;
+      padding: 0; }
+      .esp-approach-section .approach-card .key-benefits li {
+        margin-bottom: 0.5rem;
+        color: #cccccc;
+        font-size: 0.9rem; }
+        .esp-approach-section .approach-card .key-benefits li strong {
+          color: #66b3ff; }
+    .esp-approach-section .approach-card .icon img {
+      width: 50px;
+      height: 50px; }
+
 .section-title {
   font-size: 2.5rem;
   margin-bottom: 3rem; }
@@ -649,19 +713,15 @@ img {
   min-height: 40vh; }
   .intro-section p {
     max-width: 600px;
-    margin: auto;
-    color: #0a1b24; }
+    margin: auto; }
 
 .learning-solutions {
   background-color: white; }
   .learning-solutions .solution-box {
     padding: 1rem;
-    background: linear-gradient(135deg, #bdecfa, white);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 2rem; }
-    .learning-solutions .solution-box h4 {
-      color: #004080; }
 
 .rtt-section {
   background-color: #09304e;
@@ -724,7 +784,7 @@ img {
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    height: 190px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
@@ -740,12 +800,10 @@ img {
 
 .contact-section {
   background: linear-gradient(84deg, #0a1b24 51%, #004080 100%); }
-  .contact-section .contact-info {
-    background-color: rgba(0, 0, 0, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); }
+  .contact-section .contact-left-bg {
+    background: #0a1b24 url(/images/contact-us-bg.jpg) no-repeat center/cover;
+    background-blend-mode: overlay; }
   .contact-section .contact-form {
-    background-color: rgba(255, 255, 255, 0.9);
     height: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); }
