--- a/themes/growth-sketch/assets/scss/pages/_about.scss
+++ b/themes/growth-sketch/assets/scss/pages/_about.scss
@@ -1,6 +1,6 @@
 @import '../abstracts/variables';
 $background-clr: #fffceb;
-$image-bg: hsla(45, 100%, 51%, 0.351);
+$image-bg: hsl(45, 100%, 51%);
 
 .esp-evolution {
   background-color: $light-clr;
@@ -56,7 +56,7 @@ $image-bg: hsla(45, 100%, 51%, 0.351);
     }
 
     p {
-      color: #666;
+      // color: #666;
       margin-bottom: 1.5rem;
     }
 
@@ -91,13 +91,97 @@ $image-bg: hsla(45, 100%, 51%, 0.351);
       // border-radius: 10px;
       // overflow: hidden;
       width: 300px;
-@media(min-width:768px){
-      transform: rotate(-10deg);
 
-}
+      @media(min-width:768px) {
+        transform: rotate(-10deg);
+
+      }
+
       img {
         // width: 100%;
         // border-radius: 5px;
+      }
+    }
+  }
+}
+
+
+
+$text-light: hsl(0, 0%, 80%);
+$text-muted: hsl(0, 0%, 60%);
+
+.esp-approach-section {
+  padding-block: 5rem;
+  background-color: $secondary-clr;
+  background: linear-gradient(84deg, rgba(10, 27, 36, 1) 51%, rgba(0, 64, 128, 1) 100%);
+
+  .col-md-4:nth-child(odd) .approach-card {
+    background: linear-gradient(135deg, $primary-clr 60%, $secondary-clr 100%);
+    color: $text-light-clr;
+  }
+
+  .col-md-4:nth-child(even) .approach-card {
+    background: linear-gradient(135deg, $secondary-clr 60%, $primary-clr 100%);
+    color: $text-light-clr;
+  }
+
+  .approach-card {
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-between;
+    gap: 1rem;
+    background: $primary-clr;
+    // text-align: center;
+    min-height: 450px;
+    border-radius: 25px;
+    color: $text-light-clr;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    img {
+      width: 50px;
+      height: 50px;
+    }
+
+    h4 {
+      // margin-top: 2rem;
+      color: $text-light;
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
+
+    p {
+      color: $text-muted;
+      font-size: 0.95rem;
+    }
+
+    .key-benefits {
+      list-style: none;
+      padding: 0;
+
+      // margin-top: 1rem;
+      li {
+        margin-bottom: 0.5rem;
+        color: $text-light;
+        font-size: 0.9rem;
+
+        strong {
+          color: hsl(210, 100%, 70%);
+        }
+      }
+    }
+
+    .icon {
+      img {
+        width: 50px;
+        height: 50px;
       }
     }
   }
