--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -60,11 +60,14 @@
 
   .beneficiary-card {
     background: $primary-clr;
+    background: linear-gradient(135deg, $primary-clr 60%, $secondary-clr 100%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    color: $text-light-clr;
     padding: min(0.3rem, 1rem);
     text-align: center;
-    transition: all 0.3s ease;
-    width: 150px;
-    height: 150px;
+    width:  160px;
+    height: 160px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
@@ -72,6 +75,10 @@
     align-items: center;
     margin-inline: auto;
 
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
     @media(max-width:425px) {
       width: 40vw;
       height: 40vw;
@@ -140,9 +147,9 @@
   i {
     background-color: transparent;
     color: $primary-clr;
-    font-size: 1.2rem;
-    width: 1.4em;
-    height: 1.4em;
+    font-size: 1.3rem;
+    // width: 1.4em;
+    // height: 1.4em;
   }
 
   .btn {
@@ -423,9 +430,9 @@
 
 
 .why-espeople {
-  padding: 2rem;
+  // padding: 2rem;
   font-family: 'Arial', sans-serif;
-  color: #333;
+  // color: #333;
   background: #f9f9f9;
 }
 
@@ -436,7 +443,7 @@
 }
 
 .why-espeople .column {
-  background: #fff;
+  // background: #fff;
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -451,7 +458,7 @@
 
 .why-espeople h3 {
   margin-bottom: 1rem;
-  color: #444;
+  // color: #444;
   font-size: 1.5rem;
 }
 
@@ -474,12 +481,12 @@
 
 .why-espeople em {
   font-style: italic;
-  color: #777;
+  // color: #777;
 }
 
 .why-espeople strong {
   font-weight: bold;
-  color: #555;
+  // color: #555;
 }
 
 /* Desktop Layout */
