--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!-- Section 1- Hero -->
-<section class="hero d-flex align-items-center pt-0 pt-md-3 pb-3  bg-primary--light">
+<section class="hero d-flex align-items-center pt-0 pt-md-3 pb-3  gradient-bg">
   <div class="container text-center text-md-start">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-6 mt-2 mt-md-0 py-3 px-3 px-md-0">
@@ -143,7 +143,7 @@
   <!-- <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2> -->
 
   <!-- Business Organizations -->
-  <div class="business-section bg-primary--light px-4 px-md-0 py-5">
+  <div class="business-section gradient-bg px-4 px-md-0 py-5">
     <div class="container">
 
       <div class="row align-items-center">
@@ -163,7 +163,7 @@
           </p>
           <div class="d-flex flex-column flex-md-row  align-items-center mt-4 justify-content-center justify-content-md-start gap-md-2 btn-row">
             <!-- "Know More" Button -->
-            <a href="/esp-government" class="btn btn-primary">Know more</a>
+            <a href="/esp-business" class="btn btn-primary">Know more</a>
           
               <!-- PDF Icon with Dropdown for Brochure -->
               <div class="dropdown mt-2 mt-md-0">
@@ -244,7 +244,7 @@
   </div>
 
   <!-- Education Sector -->
-  <div class="education-section bg-primary--light px-4 px-md-0 py-5">
+  <div class="education-section gradient-bg px-4 px-md-0 py-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
@@ -371,7 +371,7 @@
 </section>
 
 <!-- sec 4 - evolution -->
-<section class="evolution-vision-mission wave px-4 px-md-0 text-light">
+<section class="evolution-vision-mission wave px-4 px-md-0 gradient-bg">
   <div class="container">
     <div class="row">
       <!-- Evolution Section -->
@@ -521,34 +521,37 @@
   </div>
 </section>
 
-<section class="why-espeople">
-  <div class="content">
-    <div class="column learning-model">
-      <img src="/images/learning-model.png" alt="learning model">
-      <h3>The ESP Learning Model</h3>
-      <ul>
-        <li><strong>Awareness:</strong> Learning begins with creating a sense of awareness.</li>
-        <li><strong>Understanding:</strong> Gain clarity of the situation with a resource person.</li>
-        <li><strong>Learning:</strong> Facilitate real-world application of the understanding.</li>
-        <li><strong>Realization:</strong> Perceive the situation in its entirety as realization unfolds.</li>
-        <li><strong>Habitualization:</strong> Internalize and habitualize learned skills or behaviors.</li>
-      </ul>
-    </div>
-    <div class="column core-belief">
-      <img src="/images/core-belief.png" alt="our-core-belief img">
-      <h3>Our Core Belief</h3>
-      <p>
-        Love people for who they are instead of judging them for what they are not.
-        <em>Essence is, accept people as they are!</em>
-      </p>
-    </div>
-    <div class="column delivery">
-      <img src="/images/what-we-deliver-1.png" alt="what we deliver">
-      <h3>What We Deliver</h3>
-      <p>
-        We energize your team's capabilities and synergize them with core strengths for high performance.
-        <strong>"Thus, we are ESPeople Trainingsmiths"</strong>
-      </p>
+<section class="why-espeople py-custom">
+  <div class="container">
+    <h2 class="section-title mb-5">Why ESPeople</h2>
+    <div class="content">
+      <div class="column learning-model gradient-bg-card">
+        <img src="/images/learning-model.png" alt="learning model">
+        <h3>The ESP Learning Model</h3>
+        <ul>
+          <li><strong>Awareness:</strong> Learning begins with creating a sense of awareness.</li>
+          <li><strong>Understanding:</strong> Gain clarity of the situation with a resource person.</li>
+          <li><strong>Learning:</strong> Facilitate real-world application of the understanding.</li>
+          <li><strong>Realization:</strong> Perceive the situation in its entirety as realization unfolds.</li>
+          <li><strong>Habitualization:</strong> Internalize and habitualize learned skills or behaviors.</li>
+        </ul>
+      </div>
+      <div class="column core-belief gradient-bg-card">
+        <img src="/images/core-belief.png" alt="our-core-belief img">
+        <h3>Our Core Belief</h3>
+        <p>
+          Love people for who they are instead of judging them for what they are not.
+          <em>Essence is, accept people as they are!</em>
+        </p>
+      </div>
+      <div class="column delivery gradient-bg-card">
+        <img src="/images/what-we-deliver-1.png" alt="what we deliver">
+        <h3>What We Deliver</h3>
+        <p>
+          We energize your team's capabilities and synergize them with core strengths for high performance.
+          <strong>"Thus, we are ESPeople Trainingsmiths"</strong>
+        </p>
+      </div>
     </div>
   </div>
 </section>
