--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -44,6 +44,8 @@
             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
             <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <!-- youtube -->
+             <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
             <!-- linkedin -->
              <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
         </div>
