--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .pt-8 {
   padding-top: 8rem; }
 
@@ -42,7 +41,7 @@
     box-shadow: 10px 10px 30px #d4d4d8, -10px -10px 30px #fff; }
 
 .gradient-bg-card {
-  border-radius: 25px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   background: linear-gradient(135deg, #004080 60%, #0a1b24 100%);
@@ -124,7 +123,8 @@ img {
   font-weight: 900; }
 
 .navbar {
-  height: 10vh; }
+  height: 10vh;
+  background-color: #bdecfa !important; }
   .navbar .navbar-brand img {
     width: clamp(50px, 60px, 12vw); }
   .navbar .navbar-brand .brand-name h6 {
@@ -134,12 +134,14 @@ img {
     font-family: "Daniel", sans-serif; }
   .navbar .navbar-toggler {
     border: none; }
-  @media (max-width: 768px) {
-    .navbar .navbar-collapse {
-      position: absolute;
-      top: 10vh;
-      left: 0;
-      right: 0; } }
+  .navbar .navbar-collapse {
+    background-color: #bdecfa !important; }
+    @media (max-width: 768px) {
+      .navbar .navbar-collapse {
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        right: 0; } }
   .navbar .nav-item .dropdown-menu {
     min-width: fit-content;
     background-color: #e6f2ff; }
@@ -348,10 +350,11 @@ img {
   .industry-section .industry-icon {
     width: 80%;
     margin-inline: auto;
-    display: block; }
+    display: block;
+    border-radius: 10px; }
     @media (min-width: 991px) {
       .industry-section .industry-icon {
-        width: 50%; } }
+        width: 70%; } }
   .industry-section i {
     color: #ffc105;
     margin-right: 1rem;
@@ -376,9 +379,7 @@ img {
 
 .evolution-vision-mission {
   position: relative;
-  background-color: #0a1b24;
-  padding: 9rem 0;
-  border-radius: 10px; }
+  padding: 9rem 0; }
   .evolution-vision-mission::after {
     content: "";
     position: absolute;
@@ -390,59 +391,6 @@ img {
     background: url("/images/wave.svg") no-repeat bottom;
     background-size: cover;
     z-index: 1; }
-  .evolution-vision-mission .wave {
-    position: relative;
-    background-color: #0a1b24; }
-    .evolution-vision-mission .wave::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 100%;
-      height: 100px;
-      background: url("/images/wave.svg") no-repeat bottom;
-      background-size: cover;
-      z-index: 1; }
-  .evolution-vision-mission .evolution-vision-mission {
-    background-color: #0a1b24;
-    padding: 9rem 0;
-    border-radius: 10px; }
-    .evolution-vision-mission .evolution-vision-mission::after {
-      height: 200px;
-      background: url("/images/wave.svg") no-repeat bottom; }
-    .evolution-vision-mission .evolution-vision-mission .content {
-      position: relative;
-      z-index: 2; }
-    .evolution-vision-mission .evolution-vision-mission h1 {
-      padding-bottom: 0.8rem;
-      position: relative; }
-      .evolution-vision-mission .evolution-vision-mission h1::after {
-        position: absolute;
-        content: "";
-        border-bottom: 3px solid #fff;
-        width: 50%;
-        bottom: 0;
-        left: 0;
-        transition: width 1000ms ease-in-out; }
-      .evolution-vision-mission .evolution-vision-mission h1:hover {
-        cursor: pointer; }
-        .evolution-vision-mission .evolution-vision-mission h1:hover::after {
-          width: 100%; }
-    .evolution-vision-mission .evolution-vision-mission p {
-      font-style: italic; }
-    .evolution-vision-mission .evolution-vision-mission ul {
-      list-style: none; }
-      .evolution-vision-mission .evolution-vision-mission ul li {
-        margin-bottom: 10px; }
-        .evolution-vision-mission .evolution-vision-mission ul li::before {
-          content: "•";
-          margin-right: 10px; }
-    .evolution-vision-mission .evolution-vision-mission .vertical-divider {
-      width: 2px;
-      height: 100%;
-      background-color: #fff;
-      margin: auto; }
   .evolution-vision-mission .learning-model-container {
     display: flex;
     flex-direction: column;
@@ -548,7 +496,7 @@ img {
 
 .why-espeople .column img {
   max-width: 100%;
-  border-radius: 8px;
+  border-radius: 10px;
   margin-bottom: 1rem; }
 
 .why-espeople h3 {
@@ -621,17 +569,6 @@ img {
     margin-bottom: 1rem; }
   .learning-section .text-content p {
     margin-bottom: 1.5rem; }
-  .learning-section .text-content .view-more-btn {
-    background-color: #ffc105;
-    color: #fff;
-    border-radius: 1.5rem;
-    padding: 0.5rem 1.5rem;
-    text-transform: uppercase;
-    font-size: 0.875rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s; }
-    .learning-section .text-content .view-more-btn:hover {
-      background-color: #d19d00; }
   .learning-section .image-content {
     display: flex;
     justify-content: center; }
@@ -660,7 +597,7 @@ img {
     gap: 1rem;
     background: #004080;
     min-height: 450px;
-    border-radius: 25px;
+    border-radius: 10px;
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease; }
@@ -696,17 +633,23 @@ img {
   margin-bottom: 3rem; }
 
 .hero-clientele {
-  background: #004080 url("/images/manufacturing-business.jpg") no-repeat center/cover;
+  background: #004080 no-repeat center/cover;
   background-blend-mode: overlay;
   color: white; }
   .hero-clientele .hero-title {
     font-size: 2.5rem; }
+  .hero-clientele.business {
+    background-image: url(/images/manufacturing-business.jpg); }
   .hero-clientele.non-profit {
     background-image: url(/images/non-profit-bg.jpg); }
   .hero-clientele.education {
     background-image: url(/images/education-img-1.jpeg); }
   .hero-clientele.government {
     background-image: url(/images/government-org.jpeg); }
+  .hero-clientele.focussed {
+    background-image: url(/images/homemaker.jpg); }
+  .hero-clientele.other {
+    background-image: url(/images/outbound-training.webp); }
 
 .intro-section {
   background-color: #bdecfa;
@@ -780,7 +723,7 @@ img {
     background: linear-gradient(135deg, #0a1b24 60%, #004080 100%);
     color: white; }
   .services-section .service-card {
-    border-radius: 25px;
+    border-radius: 10px;
     color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
