--- a/themes/growth-sketch/assets/scss/pages/_home.scss
+++ b/themes/growth-sketch/assets/scss/pages/_home.scss
@@ -121,10 +121,10 @@
     width: 80%;
     margin-inline: auto;
     display: block;
-
+    border-radius: 10px;
     // margin-bottom: 2rem;
     @media(min-width:991px) {
-      width: 50%;
+      width: 70%;
     }
   }
 
@@ -161,9 +161,9 @@
 
 .evolution-vision-mission {
   position: relative;
-  background-color: $secondary-clr; // Your base section background color
+  // background-color: $secondary-clr; // Your base section background color
   padding: 9rem 0; // Padding for the section content
-  border-radius: 10px;
+  // border-radius: 10px;
 
   // margin-inline: 5rem;
   // Pseudo-element to create the wave at the bottom
@@ -181,96 +181,8 @@
   }
 
 
-  .wave {
-    position: relative;
-    background-color: $secondary-clr; // Your base section background color
-    // Pseudo-element to create the wave at the bottom
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 100%;
-      height: 100px; // Adjust the height as per your need
-      background: url('/images/wave.svg') no-repeat bottom;
-      background-size: cover;
-      z-index: 1;
-    }
-  }
 
-  .evolution-vision-mission {
-    background-color: $secondary-clr; // Your base section background color
-    padding: 9rem 0; // Padding for the section content
-    border-radius: 10px;
 
-    &::after {
-      height: 200px; // Adjust the height as per your need
-      background: url('/images/wave.svg') no-repeat bottom;
-    }
-
-    // Adding a higher z-index for the content to sit above the wave
-    .content {
-      position: relative;
-      z-index: 2;
-    }
-
-    h1 {
-      // font-size: 2.5rem;
-      // font-weight: 700;
-      // margin-bottom: 20px;
-      padding-bottom: 0.8rem;
-      position: relative;
-
-      &::after {
-        position: absolute;
-        content: "";
-        border-bottom: 3px solid $white;
-        width: 50%;
-        bottom: 0;
-        left: 0;
-        transition: width 1000ms ease-in-out;
-      }
-
-      &:hover {
-        cursor: pointer;
-
-        &::after {
-          width: 100%;
-        }
-      }
-    }
-
-    p {
-      // font-size: 1.1rem;
-      // font-weight: 500;
-      font-style: italic;
-      // margin-bottom: 10px;
-    }
-
-    ul {
-      list-style: none;
-      // font-size: 1rem;
-      // font-weight: 500;
-
-      li {
-        margin-bottom: 10px;
-
-        &::before {
-          content: "•";
-          // color: white;
-          margin-right: 10px;
-        }
-      }
-    }
-
-    .vertical-divider {
-      width: 2px;
-      height: 100%;
-      background-color: $white;
-      margin: auto;
-    }
-  }
 
   // learning model animation section
   .learning-model-container {
@@ -452,7 +364,7 @@
 
 .why-espeople .column img {
   max-width: 100%;
-  border-radius: 8px;
+  border-radius: 10px;
   margin-bottom: 1rem;
 }
 
