--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -143,7 +143,7 @@
   <!-- <h2 class="section-title text-center mb-5">Clientele Beneficiaries</h2> -->
 
   <!-- Business Organizations -->
-  <div class="business-section gradient-bg px-4 px-md-0 py-5">
+  <div class="business-section gradient-bg px-4 px-md-0 py-custom">
     <div class="container">
 
       <div class="row align-items-center">
@@ -171,8 +171,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="col-md-6 order-first">
-          <img src="/images/manufacturing-business.png" alt="Business Icon" class="industry-icon neumorphism">
+          <img src="/images/manufacturing-business.png" alt="Business Icon" class="industry-icon">
          
           
         </div>
@@ -192,11 +192,11 @@
   </div>
 
   <!-- Non-Profit Organizations -->
-  <div class="nonprofit-section px-4 px-md-0 py-5">
+  <div class="nonprofit-section px-4 px-md-0 py-custom">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="industry-icon neumorphism">
+          <img src="/images/non-profit-1.png" alt="Non-Profit Icon" class="industry-icon">
         </div>
         <div class="col-md-6">
           <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-building-ngo"></i>ESP Non-Profit</h3>
@@ -228,8 +228,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -244,11 +244,11 @@
   </div>
 
   <!-- Education Sector -->
-  <div class="education-section gradient-bg px-4 px-md-0 py-5">
+  <div class="education-section gradient-bg px-4 px-md-0 py-custom">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon neumorphism">
+          <img src="/images/education-icon.png" alt="Education Icon" class="industry-icon">
         </div>
         <div class="col-md-6 order-md-1">
           <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-user-graduate"></i>ESP Education</h3>
@@ -272,8 +272,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -287,11 +287,11 @@
 
   </div>
   <!-- Government Organizations -->
-  <div class="government-section px-4 px-md-0 py-5">
+  <div class="government-section px-4 px-md-0 py-custom">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/government-org.png" alt="Government Icon" class="industry-icon neumorphism">
+          <img src="/images/government-org.png" alt="Government Icon" class="industry-icon">
         </div>
         <div class="col-md-6 order-md-2">
           <h3 class="industry-title mt-4 mt-md-0"><i class="fa-solid fa-landmark"></i>ESP Government</h3>
@@ -318,8 +318,8 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/Kaya.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
               <!-- YouTube Icon with Link to Open Modal -->
@@ -338,7 +338,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 order-first">
-          <img src="/images/focussed.png" alt="Clientele Icon" class="industry-icon neumorphism">
+          <img src="/images/focussed.png" alt="Clientele Icon" class="industry-icon">
         </div>
         <div class="col-md-6 order-md-1">
           <h3 class="industry-title mt-4 mt-md-0">Focussed Individual Clientele</h3>
@@ -371,7 +371,7 @@
 </section>
 
 <!-- sec 4 - evolution -->
-<section class="evolution-vision-mission wave px-4 px-md-0 gradient-bg">
+<section class="evolution-vision-mission px-4 px-md-0 gradient-bg">
   <div class="container">
     <div class="row">
       <!-- Evolution Section -->
@@ -389,7 +389,7 @@
       <div class="col-md-2 mx-auto d-none d-md-block">
         <div class="vertical-divider"></div>
       </div>
-
+<hr class="d-md-none">
       <!-- Vision & Mission Section -->
       <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
         <h1 class="display-5">ESP Vision & Mission</h1>
@@ -480,7 +480,7 @@
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="neumorphic-card">
           <h4 class="mt-3">Our Core Belief</h4>
-          <img src="/images/core-belief.png" alt="our-core-belief img">
+          <img src="/images/energize-synergize.jpeg" alt="our-core-belief img">
           <p class="mt-3"><em>Love people for who they are....</em> <br>instead of judging them for what they are not....
             <br> <br>
             <strong><em>Essence is, accept people as they are!</em></strong>
@@ -537,15 +537,17 @@
         </ul>
       </div>
       <div class="column core-belief gradient-bg-card">
-        <img src="/images/core-belief.png" alt="our-core-belief img">
+        <img src="/images/core-belief-1.jpeg" alt="our-core-belief img">
         <h3>Our Core Belief</h3>
         <p>
-          Love people for who they are instead of judging them for what they are not.
+          Love people for who they are instead of judging them for what they are not. <br> <br>
           <em>Essence is, accept people as they are!</em>
         </p>
+        <h5>Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational growth goals</h5>
       </div>
       <div class="column delivery gradient-bg-card">
-        <img src="/images/what-we-deliver-1.png" alt="what we deliver">
+        <img src="/images/energize-synergize.jpeg" alt="energize-synergize img">
+
         <h3>What We Deliver</h3>
         <p>
           We energize your team's capabilities and synergize them with core strengths for high performance.
