--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -10,7 +10,7 @@ Renders a menu for the given menu ID.
 {{- $page := .page }}
 {{- $menuID := .menuID }}
 
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top p-0">
+<nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
@@ -25,7 +25,7 @@ Renders a menu for the given menu ID.
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse bg-light pe-4" id="navbarNav">
+    <div class="collapse navbar-collapse pe-4" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {{- with index site.Menus $menuID }}
         {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
